--- a/package.json
+++ b/package.json
@@ -1,22 +1,32 @@
 {
-  "name": "knight-server",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/knightmovie/admin-server.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/knightmovie/admin-server/issues"
-  },
-  "homepage": "https://github.com/knightmovie/admin-server#readme",
-  "dependencies": {
-    "express": "^4.18.2"
-  }
+    "name": "knight-server",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "start": "nodemon app"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/knightmovie/admin-server.git"
+    },
+    "author": "",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/knightmovie/admin-server/issues"
+    },
+    "homepage": "https://github.com/knightmovie/admin-server#readme",
+    "dependencies": {
+        "bcrypt": "^5.1.0",
+        "body-parser": "^1.20.2",
+        "cors": "^2.8.5",
+        "dotenv": "^16.0.3",
+        "express": "^4.18.2",
+        "jsonwebtoken": "^9.0.0",
+        "mongoose": "^7.1.1"
+    },
+    "devDependencies": {
+        "nodemon": "^2.0.22"
+    }
 }
